<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <DUT Name="T_QueueBase" Id="{25fd9e85-91bd-435f-849a-9e4cf3c72752}">
    <Declaration><![CDATA[///{attribute 'pack_mode' := '1'}
{attribute 'enable_dynamic_creation' := ''}
TYPE T_QueueBase :
STRUCT
	pData: POINTER TO BYTE;
	pNext: POINTER TO T_QueueBase;
	pPrevious: POINTER TO T_QueueBase;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>